--- a/src/app/modules/report-managment/exception-log/exception-log.component.html
+++ b/src/app/modules/report-managment/exception-log/exception-log.component.html
@@ -76,7 +76,7 @@
 
 
     </div>
-    <div class="example-table-container">
+    <div class="example-table-container overflow-scroll" [style.height]="gridHeight">
         <mat-table class="lmat-elevation-z8"
                    #table
                    [dataSource]="dataSource"
