--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -2,7 +2,7 @@
 
     <!-- Header -->
     <div
-        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4">
+        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between">
         <!-- Loader -->
         <div
             class="absolute inset-x-0 bottom-0"
@@ -10,7 +10,7 @@
             <mat-progress-bar [mode]="'indeterminate'" *ngIf="loading"></mat-progress-bar>
         </div>
         <!-- Title -->
-        <div class=" w-full mt-4 text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Roles list</div>
+        <div class=" w-full  text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Roles list</div>
         <!-- Actions -->
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
             <button
