--- a/src/app/modules/report-managment/notification-detail/notification-detail.component.html
+++ b/src/app/modules/report-managment/notification-detail/notification-detail.component.html
@@ -1,14 +1,5 @@
-<h3 class="kt-portlet__head-title">View User Location History</h3>
-<div style="text-align:end;text-align:right;width:80%">
-    <button type="button" class="button-red" mat-raised-button cdkFocusInitial value="Cancel"
-            [mat-dialog-close]="false">
-        Cancel
-    </button>&nbsp;
-    <button type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="blockUser()"
-            [disabled]="viewLoading || submitted">
-        Block User
-    </button>
-</div>
+<h3 class="text-3xl   font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">View User Location History</h3>
+
 <agm-map [zoom]="zoom" style="width: 500px;height: 500px"
          [latitude]="lat"
          [longitude]="lng"
@@ -26,3 +17,16 @@
 
     </agm-marker>
 </agm-map>
+<div class="row pt-4 border-t ">
+    <div class="col-lg-12 text-right">
+        <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel"
+        [mat-dialog-close]="false">
+        Cancel
+    </button>&nbsp;
+    <button type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="blockUser()"
+            [disabled]="viewLoading || submitted">
+        Block User
+    </button>
+    </div>
+</div>
+
