--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -4,9 +4,7 @@
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4">
     <div class="text-3xl mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2 w-full" style="background-color: #f6fcf8;">Create Fense</div>
     <div class="flex flex-shrink-0 items-center sm:mt-0 sm:ml-4">
-      <button [routerLink]="['/user-management/viewCirclesfence']" class="ml-4" mat-flat-button [color]="'primary'">
-        <mat-icon class="mr-2">visibility</mat-icon>View Map
-      </button>
+
 
     </div>
     
@@ -33,6 +31,13 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
+  </div>
+</div>
+<div class="row py-2">
+  <div class="col-lg-12 text-right">
+    <button [routerLink]="['/user-management/viewCirclesfence']" class="ml-4" mat-flat-button [color]="'primary'">
+      <mat-icon class="mr-2">visibility</mat-icon>View Map
+    </button>
   </div>
 </div>
   <!-- Main -->
