--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -80,6 +80,7 @@
 
 
       <div class="row">
+        
         <div class="col-lg-3 col-sm-12">
 
           <div>
@@ -89,7 +90,30 @@
             </mat-form-field>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-12">
+
+        <div class="col-lg-3 col-sm-12">        
+          <div>
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+              <mat-label class="customMatLabel">Gender Count<strong class="matMandatory">*</strong></mat-label>
+              <input matInput placeholder="Enter Gender Count" formControlName="GenderCount" autocomplete="off" appNumberOnly />
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-12">        
+          <div>
+            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+              <mat-label class="customMatLabel">Gender Type<strong class="matMandatory">*</strong></mat-label>
+              <mat-select formControlName="GenderType">
+                <mat-option *ngFor="let gender of GenderLov" [value]="gender.Name">
+                  {{gender.Name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <!-- <div class="col-lg-3 col-sm-12">
           <div>
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Male<strong class="matMandatory">*</strong></mat-label>
@@ -112,7 +136,7 @@
               <input matInput placeholder="Enter Transgender Population" formControlName="Transgender" autocomplete="off" appNumberOnly />
             </mat-form-field>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
@@ -199,8 +223,8 @@
               <td>{{array.VillageName}}</td>
               <td>{{array.NoOfFormaer}}</td>
               <td>{{array.FarmSize}}</td>
-              <!-- <td>{{array.GenderCount}}</td>
-              <td>{{array.GenderType}}</td> -->
+              <td>{{array.GenderCount}}</td>
+              <td>{{array.GenderType}}</td>
               <td>{{array.AverageLoanSize}}</td>
               <td  style="width: 100px; text-align:center;" >
                 <div class="w-96">
