--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -27,8 +27,8 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-    
-    
+
+
                 </div>
             </div>
             <div class="col-lg-3 col-sm-12">
@@ -53,22 +53,31 @@
                 </div>
             </div>
             <div class="col-lg-3 col-sm-12">
-                                    <!-- <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                  <mat-label>loanutilization Name</mat-label>
-                  <input matInput formControlName="loanutilizationName" placeholder="Enter loanutilization Name" maxlength="100" autocomplete="off" appAlphabetOnly>
-                </mat-form-field> -->
+
+<!--                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                    <mat-label class="customMatLabel">From</mat-label>-->
+<!--                    <input matInput readonly appNumberOnly [matDatepicker]="picker" placeholder="ddMMyyyy"-->
+<!--                           formControlName="FromDate" [max]="getToday()" (dateChange)="setFromDate()">-->
+<!--                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>-->
+<!--                    <mat-datepicker #picker></mat-datepicker>-->
+<!--                </mat-form-field>-->
+
+
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                    <mat-label class="customMatLabel">From</mat-label>
-                    <input matInput [matDatepicker]="picker" placeholder="ddMMyyyy" autocomplete="off"
-                        formControlName="FromDate" [max]="getToday()" (dateChange)="setFromDate()" autocomplete="off">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
+                    <mat-label class="customMatLabel">From </mat-label>
+                    <input matInput  [matDatepicker]="picker2" formControlName="FromDate" maxlength="8"
+                           autocomplete="off" [max]="getToday()" (dateChange)="setFromDate()" appNumberOnly/>
+                    <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                    <mat-datepicker #picker2></mat-datepicker>
+
+<!--                    <mat-error *ngIf="hasError('TransactionDate', 'required')">Transaction Date <strong>required</strong>-->
+<!--                    </mat-error>-->
                 </mat-form-field>
             </div>
             <div class="col-lg-3 col-sm-12">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label class="customMatLabel">To</mat-label>
-                    <input matInput [matDatepicker]="picker1" placeholder="ddMMyyyy" formControlName="ToDate"
+                    <input matInput readonly appNumberOnly [matDatepicker]="picker1" placeholder="ddMMyyyy" formControlName="ToDate"
                         [min]="minDate" [max]="getTodayForTo()" (dateChange)="setToDate()" autocomplete="off">
                     <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                     <mat-datepicker #picker1></mat-datepicker>
@@ -132,7 +141,7 @@
         <div class="col-md-12 kt-margin-bottom-10-mobile mr-4">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label>LoanCaseNo</mat-label>
-                <input matInput formControlName="LoanCaseNo" placeholder="Enter LoanCaseNo" maxlength="100"
+                <input appNumberOnly matInput formControlName="LoanCaseNo" placeholder="Enter LoanCaseNo" maxlength="100"
                     autocomplete="off">
             </mat-form-field>
         </div>
@@ -289,7 +298,7 @@
                 <div class="mat-table__message" *ngIf="loading">Please wait....</div>
 
             </div>
-            
+
 
         </div>
 
