--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -27,8 +27,8 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-        
-        
+
+
                 </div>
             </div>
             <div class="col-lg-3 col-sm-12">
@@ -64,7 +64,7 @@
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
                 </div>
-        
+
             </div>
             <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
@@ -189,7 +189,7 @@
                             <td style="width: 20%">{{child.VisitedDate}}</td>
                             <td style="width: 20%">{{child.Purpose}}</td>
                             <td style="width: 20%">{{child.Remarks}}</td>
-                            <td style="width: 20%">{{child.Status}}</td>
+                            <td style="width: 20%">{{getStatus(child.Status)}}</td>
 
                             <td style="width: 20%">
 
