--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -1,12 +1,12 @@
 <div
-    class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
     <!-- Header -->
     <div
-        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4">
+        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between">
         <!-- Loader -->
         <!-- Title -->
-        <div class="text-3xl w-full font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
+        <div class="text-3xl w-full font-extrabold tracking-tight pb-1 border-b mb-2 border-green-500 p-2"
              style="background-color: #f6fcf8;">Pages List
         </div>
         <!-- Actions -->
