--- a/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
+++ b/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
@@ -19,7 +19,7 @@
 
       <div class="collapse" id="collapseExample">
         <div class="card card-body">
-            <div class="py-4" [formGroup]="FilterForm">
+            <div class="" [formGroup]="FilterForm">
 
 
                 <div class="row">
@@ -111,7 +111,6 @@
         <span class="mat-header-cell text-white" mat-sort-header="TransactionId">Transaction ID</span>
         <span class="mat-header-cell text-white" mat-sort-header="ApiName">API Name</span>
         <span class="mat-header-cell text-white" mat-sort-header="CallDateTime">Call Date Time</span>
-        <span class="mat-header-cell text-white" mat-sort-header="ResponseDateTime">Response Date Time</span>
         <span class="mat-header-cell text-white" mat-sort-header="ResponseTotalTime">Total Time Taken</span>
         <span class="mat-header-cell text-white" mat-sort-header="View">View</span>
     </section>
@@ -124,8 +123,7 @@
                 <span class="mat-cell py-6 self-center font-bold" style="width: 10px; font-size: 12px;">{{item?.Id}}</span>
                 <span class="mat-cell py-6 self-center font-bold" style="font-size: 12px;">{{item?.TransactionId}}</span>
                 <p class="mat-cell py-6 self-center  font-bold" style="font-size: 12px;">{{item?.APIName}}</p>
-                <span class="mat-cell py-6 self-center px-2 font-bold" style="font-size: 12px;">{{item?.CallDateTime}}</span>
-                <span class="mat-cell py-6 self-center px-2  font-bold" style="font-size: 12px;">{{item?.ResponseDateTime}}</span>
+                <span class="mat-cell py-6 self-center px-2 font-bold" style="font-size: 12px;">{{item?.CallDateTime | date}}</span>
                 <span class="mat-cell py-6 self-center px-2 font-bold " style="font-size: 12px;">{{item?.TotalTimeTaken}}</span>
                 <span class="mat-cell py-6 self-center">
                     <button mat-icon-button color="primary" (click)="viewRequestResponse($event,item)">
