--- a/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
+++ b/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
@@ -106,7 +106,7 @@
       </mat-accordion> -->
     
 
-    <section matSort class="mat-elevation-z2 mat-header-row bg-green mt-2 ">
+    <section matSort class="mat-elevation-z2 mat-header-row bg-green">
         <span class="mat-header-cell text-white" mat-sort-header="Id" style="width: 10px;">ID</span>
         <span class="mat-header-cell text-white" mat-sort-header="TransactionId">Transaction ID</span>
         <span class="mat-header-cell text-white" mat-sort-header="ApiName">API Name</span>
