report pages styling

--- a/src/app/modules/report-managment/ecib-queue/ecib-queue.component.html
+++ b/src/app/modules/report-managment/ecib-queue/ecib-queue.component.html
@@ -1,24 +1,63 @@
 <div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-3xl mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">ECIB Queue</div>
+
     <!-- Header -->
-    <div class="py-4" [formGroup]="FilterForm">
+
+
+    <div class="row py-3">
+        <div class="col-lg-8 col-sm-12">
+            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">ECIB Queue</div>
+        </div>
+        <div class="col-lg-4 col-sm-12 self-center">
+            <p class="text-right">
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                </button>
+              </p>
+        </div>
+    </div>
+
+    <!-- Header -->
+
+
+
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+            <div class="" [formGroup]="FilterForm">
+
+
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                            <mat-form-field class="w-full" appearance="outline">
+                                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search" autocomplete="off"
+                                       appearance="outline">
+                                <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+    <div  [formGroup]="FilterForm">
         <div
             class="absolute inset-x-0 bottom-0">
             <mat-progress-bar [mode]="'indeterminate'" *ngIf="loading"></mat-progress-bar>
         </div>
 
 
-        <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                    <mat-form-field class="w-full" appearance="outline">
-                        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search" autocomplete="off"
-                               appearance="outline">
-                        <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
-                    </mat-form-field>
-                </div>
-            </div>
-        </div>
+
 
     </div>
     <div class="example-table-container  overflow-scroll" [style.height]="gridHeight">
