--- a/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
+++ b/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
@@ -1,9 +1,43 @@
-<div
-    class="px-10 pb-4  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-3xl mt-4 font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
-         style="background-color: #f6fcf8;">Assign Pages
+<div class="px-10 pb-4  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    
+    
+    <div class="row py-3">
+        <div class="col-lg-8 col-sm-12">
+            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Assign Pages</div>
+        </div>
+        <div class="col-lg-4 col-sm-12 self-center">
+            <p class="text-right">
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                </button>
+              </p>
+        </div>
     </div>
 
+    <!-- Header -->
+
+
+
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+            <div class="row">
+                <div class="col-lg-4 col-sm-12">
+                    <div class="flex flex-shrink-0 items-center mt-4 sm:mt-0">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
+                            <mat-label>Roles</mat-label>
+                            <mat-select data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" placeholder="--Select--" name="ProfileID"
+                                        (selectionChange)="getProfile($event)">
+                                <mat-option *ngFor="let profile of profiles" [value]="profile.ProfileID">
+                                    {{profile.ProfileName}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+    
     <!-- Header -->
     <div
         class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pb-4">
@@ -17,21 +51,7 @@
         <!-- Actions -->
 
     </div>
-    <div class="row">
-        <div class="col-lg-4 col-sm-12">
-            <div class="flex flex-shrink-0 items-center mt-4 sm:mt-0">
-                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
-                    <mat-label>Roles</mat-label>
-                    <mat-select placeholder="--Select--" name="ProfileID"
-                                (selectionChange)="getProfile($event)">
-                        <mat-option *ngFor="let profile of profiles" [value]="profile.ProfileID">
-                            {{profile.ProfileName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-        </div>
-    </div>
+
     <!-- Main -->
     <div class="mb-4">
         <!-- CONTENT GOES HERE -->
