--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -1,33 +1,31 @@
 <div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
     <!-- Header -->
-    <div
-        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between">
-        <!-- Loader -->
-        <div
-            class="absolute inset-x-0 bottom-0"
-            *ngIf="isLoading">
-            <mat-progress-bar [mode]="'indeterminate'" *ngIf="loading"></mat-progress-bar>
+
+
+    <div class="row py-3">
+        <div class="col-lg-8 col-sm-12">
+            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Roles list</div>
         </div>
-        <!-- Title -->
-        <div class=" w-full mt-4  text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Roles list</div>
-        <!-- Actions -->
-
-    </div>
-
-    <div class="row py-2">
-        <div class="col-lg-12 text-right">
-            <div class=" mt-6 sm:mt-0">
-                <button
-                    mat-flat-button
-                    [color]="'primary'"
-                    (click)="createOrEditItem()">
-                    <mat-icon [svgIcon]="'heroicons_outline:plus'"></mat-icon>
-                    <span class="ml-2 mr-1">Add New </span>
-                </button>
+        <div class="col-lg-4 col-sm-12 self-center">
+            <div class="row py-2">
+                <div class="col-lg-12 text-right">
+                    <div class=" mt-6 sm:mt-0">
+                        <button
+                            mat-flat-button
+                            [color]="'primary'"
+                            (click)="createOrEditItem()">
+                            <mat-icon [svgIcon]="'heroicons_outline:plus'"></mat-icon>
+                            <span class="ml-2 mr-1">Add New </span>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+
+
 
     <!-- Main -->
     <div class="flex flex-auto overflow-y-scroll">
