--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -1,38 +1,55 @@
 <div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4">
-    <div class="text-3xl mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2 w-full" style="background-color: #f6fcf8;">Create Fense</div>
-    <div class="flex flex-shrink-0 items-center sm:mt-0 sm:ml-4">
 
-
+  <div class="row py-3">
+    <div class="col-lg-8 col-sm-12">
+        <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Create Fense</div>
     </div>
-    
-  </div>
-  <div class="row">
-  <div class="col-lg-4 col-sm-12">
-    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
-      <mat-label>Zone</mat-label>
-      <mat-select (selectionChange)="GetBranches($event)">
-        <mat-option *ngFor="let zone of Zones" [value]="zone.ZoneId">
-          {{zone.ZoneName }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+    <div class="col-lg-4 col-sm-12 self-center">
+        <p class="text-right">
+            <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+            </button>
+          </p>
+    </div>
+</div>
+
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
 
 
-  </div>
-  <div class="col-lg-4 col-sm-12">
-    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
-      <mat-label>Branch</mat-label>
-      <mat-select (selectionChange)="GetCircles($event)">
-        <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
-          {{branch.Name }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
+              <mat-label>Zone</mat-label>
+              <mat-select (selectionChange)="GetBranches($event)">
+                <mat-option *ngFor="let zone of Zones" [value]="zone.ZoneId">
+                  {{zone.ZoneName }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+        
+        
+          </div>
+          <div class="col-lg-4 col-sm-12">
+            <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
+              <mat-label>Branch</mat-label>
+              <mat-select  (selectionChange)="GetCircles($event)">
+                <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
+                  {{branch.Name }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
   </div>
 </div>
+
+
+
+
 <div class="row py-2">
   <div class="col-lg-12 text-right">
     <button [routerLink]="['/user-management/viewCirclesfence']" class="ml-4" mat-flat-button [color]="'primary'">
